2011-08-02  Adam Strzelecki <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_gui.h m4/apple.m4:
	OSX support for wxt terminal.  For OSX, switch to using single-threaded
	hybrid GUI & console event loop at wxt_waitforinput().
	Add -framework ApplicationServices to the apple-specific
	configuration flags.

2011-07-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Console gnuplot should leave
	wgnuplot's text window settings alone.
	Bug #3307884

2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Handle multiple overprint characters, albeit not
	the way people probably expect.
	Bug #3371782

2011-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Allow "using ... xticlabels()" for
	binary files as well as ascii files.  Only string-valued functions
	are valid in this case, as no string can be read from the binary 
	datafield itself.

	* term/svg.trm: Remove size limit on svg plot dimensionts.

2011-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes):  Correct positioning of bars in clustered
	histograms when some values are missing.
	Bug #3360882

2011-07-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (test_command): Do not allow the 'test' command if there
	is no current terminal.
	Bug #3347683

2011-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Pattern-fill definitions must initialize both
	fill and stroke style; otherwise the most recent setting may bleed
	through.
	Bug #3334216

2011-06-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/getcolor.c (quantize_gray)): Remove a possible discontinuity at
	the boundary of defined palettes with a small number of segments.
	Bug #3317746

2011-06-17  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/time.c (gstrptime):  The correction for the difference in epochs
	(2000 - 1970) was incorrect when reading times in %s format.